[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/ArenaScripts/ArenaSetup.gd" type="Script" id=1]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font bigger.tres" type="DynamicFont" id=2]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font big.tres" type="DynamicFont" id=3]
[ext_resource path="res://images/TextureRed20x125.png" type="Texture" id=4]

[node name="ArenaSetup" type="Spatial"]

script = ExtResource( 1 )

[node name="SetupHolder" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="TitleLabel" type="Label" parent="SetupHolder" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Arena Setup"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="DifficultyLabel" type="Label" parent="SetupHolder" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -425.0
margin_right = 77.0
margin_bottom = -374.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Difficulty"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="DifficultyRect" type="TextureRect" parent="SetupHolder/DifficultyLabel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = 98.0
margin_right = 158.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="EasyButton" type="Button" parent="SetupHolder/DifficultyLabel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -396.0
margin_top = 108.0
margin_right = -255.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Easy"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="NormalButton" type="Button" parent="SetupHolder/DifficultyLabel" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.5
margin_top = 82.5
margin_right = 70.5
margin_bottom = 139.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Normal"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="HardButton" type="Button" parent="SetupHolder/DifficultyLabel" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 410.0
margin_top = 108.0
margin_right = 551.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Hard"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CharSelectLabel" type="Label" parent="SetupHolder" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -205.0
margin_right = 83.0
margin_bottom = -154.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Character"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CharacterRect" type="TextureRect" parent="SetupHolder/CharSelectLabel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = 78.0
margin_right = 158.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="BobButton" type="Button" parent="SetupHolder/CharSelectLabel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -396.0
margin_top = 88.0
margin_right = -255.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Bob"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="FrankButton" type="Button" parent="SetupHolder/CharSelectLabel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 88.0
margin_right = 148.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Frank"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="DaveButton" type="Button" parent="SetupHolder/CharSelectLabel" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 410.0
margin_top = 88.0
margin_right = 551.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Dave"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="BobbiButton" type="Button" parent="SetupHolder/CharSelectLabel" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -396.0
margin_top = 170.0
margin_right = -255.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Bobbi"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="FrankieButton" type="Button" parent="SetupHolder/CharSelectLabel" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 170.0
margin_right = 148.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Frankie"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="NengButton" type="Button" parent="SetupHolder/CharSelectLabel" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 410.0
margin_top = 170.0
margin_right = 551.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Neng"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="DropRateLabel" type="Label" parent="SetupHolder" index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = 70.0
margin_right = 87.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Drop Rate"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="DropRateRect" type="TextureRect" parent="SetupHolder/DropRateLabel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = 98.0
margin_right = 158.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="LowButton" type="Button" parent="SetupHolder/DropRateLabel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -396.0
margin_top = 108.0
margin_right = -255.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Low"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="MediumButton" type="Button" parent="SetupHolder/DropRateLabel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 108.0
margin_right = 148.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Medium"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="HighButton" type="Button" parent="SetupHolder/DropRateLabel" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 410.0
margin_top = 108.0
margin_right = 551.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "High"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="StartButton" type="Button" parent="SetupHolder" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1254.0
margin_top = 920.0
margin_right = 1355.0
margin_bottom = 977.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="BackButton" type="Button" parent="SetupHolder" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 565.0
margin_top = 920.0
margin_right = 666.0
margin_bottom = 977.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[connection signal="pressed" from="SetupHolder/DifficultyLabel/EasyButton" to="." method="_on_EasyButton_pressed"]

[connection signal="pressed" from="SetupHolder/DifficultyLabel/NormalButton" to="." method="_on_NormalButton_pressed"]

[connection signal="pressed" from="SetupHolder/DifficultyLabel/HardButton" to="." method="_on_HardButton_pressed"]

[connection signal="pressed" from="SetupHolder/CharSelectLabel/BobButton" to="." method="_on_BobButton_pressed"]

[connection signal="pressed" from="SetupHolder/CharSelectLabel/FrankButton" to="." method="_on_FrankButton_pressed"]

[connection signal="pressed" from="SetupHolder/CharSelectLabel/DaveButton" to="." method="_on_DaveButton_pressed"]

[connection signal="pressed" from="SetupHolder/CharSelectLabel/BobbiButton" to="." method="_on_BobbiButton_pressed"]

[connection signal="pressed" from="SetupHolder/CharSelectLabel/FrankieButton" to="." method="_on_FrankieButton_pressed"]

[connection signal="pressed" from="SetupHolder/CharSelectLabel/NengButton" to="." method="_on_NengButton_pressed"]

[connection signal="pressed" from="SetupHolder/DropRateLabel/LowButton" to="." method="_on_LowButton_pressed"]

[connection signal="pressed" from="SetupHolder/DropRateLabel/MediumButton" to="." method="_on_MediumButton_pressed"]

[connection signal="pressed" from="SetupHolder/DropRateLabel/HighButton" to="." method="_on_HighButton_pressed"]

[connection signal="pressed" from="SetupHolder/StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="SetupHolder/BackButton" to="." method="_on_BackButton_pressed"]


